いろいろ追加

--- a/preview/index.html
+++ b/preview/index.html
@@ -1,6 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Timer</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+</head>
 <body>
-<my-timer></my-timer>
+<div style="margin: 24px auto; padding: 8px 8px 24px 8px; max-width: 320px; border: solid 1px #ccc;">
+  <my-timer></my-timer>
+</div>
 <script src="./timer.js"></script>
 </body>
 </html>
